<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FamilyCart</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="SignInTitle">Sign In</string>
    <string name="EmailText">Email:</string>
    <string name="PasswordText">Password:</string>
    <string name="LogInButton">Log In</string>
    <string name="RegisterButton">Register</string>
    <string name="defaultEmailText">something@email.com</string>

</resources>
